[gd_scene load_steps=3 format=3 uid="uid://dpbh77mgn7wva"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_7nixh"]
[ext_resource type="Texture2D" uid="uid://c6qv54vi3nbm1" path="res://assets/field.tres" id="2_q7khe"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7nixh")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 800.0
texture = ExtResource("2_q7khe")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_left = 350.0
offset_top = 150.0
offset_right = 850.0
offset_bottom = 250.0
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "[center]Infinite Golf[/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="SettingsButton" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="ExitButton" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Exit"

[connection signal="pressed" from="TextureRect/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
